[gd_scene load_steps=5 format=3 uid="uid://dxcsctwe8qjd0"]

[ext_resource type="Script" path="res://Scripts/donut.gd" id="1_ta73a"]
[ext_resource type="Texture2D" uid="uid://d0tuv5ue7bq1f" path="res://Art/Donuts/Donut_Hole/Standard/Donut_Hole_RAW.png" id="2_xtp6s"]
[ext_resource type="AudioStream" uid="uid://dr46atatnfclg" path="res://SFX/Donut_Complete_SFX.wav" id="3_4cyaw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hhw1"]
size = Vector2(36, 35)

[node name="Donut" type="Node2D"]
script = ExtResource("1_ta73a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xtp6s")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4hhw1")

[node name="CookTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="Donut_Complete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4cyaw")
volume_db = -15.0
pitch_scale = 1.25

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="CookTimer" to="." method="_on_cook_timer_timeout"]
